--- a/CachingWithRedis/appsettings.Development.json
+++ b/CachingWithRedis/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "DatabaseConnection": "Host=app_db;Port=5432;Database=ApplicationDatabase;Username=myusername;Password=password123"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     }
-  }
 }
