Update container names, ports, volume and database name. Add containers folder to git ignore list. It is the folder/files created by Postgres SQL database container

--- a/CachingWithRedis/appsettings.Development.json
+++ b/CachingWithRedis/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DatabaseConnection": "Host=app_db;Port=5432;Database=ApplicationDatabase;Username=myusername;Password=password123"
+        "DatabaseConnection": "Host=cachingwithredis.database;Port=5432;Database=CachingWithRedis;Username=myusername;Password=password123;Include Error Detail=true"
     },
     "Logging": {
         "LogLevel": {
